# gestionnaire-de-ticket-codex

./: .flake8  .gitignore  Procfile  README.md  app.py  config.py  init_db_only.py  pyproject.toml  requirements.txt  run.py  structure.txt
.mypy_cache/3.14/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  (+222 more)
instance/: tickets.db
src/: extensions.py  service.py  utils.py
src/api/: __init__.py  route.py  routes.py
src/auth/: __init__.py  route.py  routes.py  utils.py
src/chat/: __init__.py
src/models/: __init__.py  channel.py  message.py  notification.py  task.py  ticket.py  user.py
src/planning/: __init__.py  routes.py
static/: style.css
templates/: base.html  create_ticket.html  edit_ticket.html  index.html  login.html  profile.html
tests/: test_app.py
(+945 files in other folders)
