[build-system] 
requires = ["setuptools>=65.5.0", "wheel"] 
build-backend = "setuptools.build_meta"

[project] 
name = "gestionnaire-de-ticket" 
version = "0.1.0"
description = "Ticket management system" 
readme = "README.md"
requires-python = ">=3.10"

[tool.flake8]
max-line-length = 110
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    "data",
    "static",
    "templates",
    "*.egg-info"
]
per-file-ignores = ["__init__.py:F401"]
max-complexity = 10
count = true
statistics = true

[tool.black] 
line-length = 110 
target-version = ["py310"]
include = ".pyi?$"
exclude = '''
/(
    .git
  | .venv
  | venv
  | build
  | dist
)/
'''

[tool.isort] 
profile = "black" 
line_length = 110

[tool.mypy] 
python_version = "3.10" 
ignore_missing_imports = true

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 100
format_css = true
format_js = true
ignore = "H006,H030,H031"

[tool.pytest.ini_options]
pythonpath = ["."]